trunk/Archive2/3a/20c84f4237fbeb/output
In file included from main.cpp:1:0:
/usr/local/include/c++/4.9.2/functional: In instantiation of 'static void std::_Function_base::_Base_manager<_Functor>::_M_clone(std::_Any_data&, const std::_Any_data&, std::false_type) [with _Functor = NonCopyable; std::false_type = std::integral_constant<bool, false>]':
/usr/local/include/c++/4.9.2/functional:1914:51:   required from 'static bool std::_Function_base::_Base_manager<_Functor>::_M_manager(std::_Any_data&, const std::_Any_data&, std::_Manager_operation) [with _Functor = NonCopyable]'
/usr/local/include/c++/4.9.2/functional:2428:19:   required from 'std::function<_Res(_ArgTypes ...)>::function(_Functor) [with _Functor = NonCopyable; <template-parameter-2-2> = void; _Res = void; _ArgTypes = {}]'
main.cpp:10:43:   required from here
/usr/local/include/c++/4.9.2/functional:1878:34: error: use of deleted function 'NonCopyable::NonCopyable(const NonCopyable&)'
    __dest._M_access<_Functor*>() =
                                  ^
main.cpp:4:8: note: 'NonCopyable::NonCopyable(const NonCopyable&)' is implicitly deleted because the default definition would be ill-formed:
 struct NonCopyable {
        ^
main.cpp:4:8: error: use of deleted function 'std::unique_ptr<_Tp, _Dp>::unique_ptr(const std::unique_ptr<_Tp, _Dp>&) [with _Tp = int; _Dp = std::default_delete<int>]'
In file included from /usr/local/include/c++/4.9.2/memory:81:0,
                 from main.cpp:2:
/usr/local/include/c++/4.9.2/bits/unique_ptr.h:356:7: note: declared here
       unique_ptr(const unique_ptr&) = delete;
       ^
