trunk/Archive2/3a/20c84f4237fbeb/main.cpp
#include <functional>
#include <memory>

struct NonCopyable {
  void operator()() const {}
  std::unique_ptr<int> ptr_;
};

int main() {
    std::function<void()> f = NonCopyable();
}
